Updated the room routes
